# MangoChat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE  PROVIDER-PLAN.md  README.md  RELEASE_RUNBOOK.md  TEST_PLAN.md  TODO.md  actions.md  architecture.md  build.rs  diction.md  proposal.md  release-process.md  setup.md  todo.md
.github/workflows/: release-windows.yml
icons/: icon.icns
installer/: Jarvis.iss  MangoChat.iss  README.md
poc/: app.py  main.py  openai_realtime_check.py  pyproject.toml
poc/static/: app.js  audio-worklet.js  index.html  styles.css
scripts/: build-installer.ps1
src/: app.js  audio-worklet.js  audio.rs  diagnostics.rs  headset.rs  hotkey.rs  index.html  main.rs  secrets.rs  settings.rs  single_instance.rs  snip.css  snip.html  snip.js  snip.rs  start_cue.rs  state.rs  styles.css  typing.rs  ui.rs  updater.rs  usage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  snip-overlay.json
src-tauri/src/: commands.rs  hotkey.rs  lib.rs  main.rs  openai.rs  snip.rs  state.rs  typing.rs  ui.rs  usage.rs
src-ui/: Cargo.toml
src-ui/src/: audio.rs  hotkey.rs  main.rs  settings.rs  snip.rs  state.rs  ui.rs  usage.rs
src-ui/src/provider/: assemblyai.rs  elevenlabs.rs  mod.rs  openai.rs  session.rs
src/provider/: assemblyai.rs  deepgram.rs  elevenlabs.rs  mod.rs  openai.rs  session.rs
src/ui/: form_state.rs  formatting.rs  mod.rs  snip_overlay.rs  theme.rs  tray.rs  widgets.rs  window.rs
src/ui/tabs/: about.rs  appearance.rs  commands.rs  dictation.rs  general.rs  mod.rs  provider.rs  usage.rs
