[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui_extras = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
enigo = "0.2"
rdev = "0.5"
arboard = "3"
log = "0.4"
env_logger = "0.11"
xcap = "0.8"
image = "0.25"
chrono = "0.4"
dirs = "5"
cpal = "0.15"
rustfft = "6"
tray-icon = "0.17"
num-complex = "0.4"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Threading", "Win32_Security"] }


