[package]
name = "mangochat"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "mangochat"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui_extras = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
enigo = "0.2"
rdev = "0.5"
arboard = "3"
log = "0.4"
env_logger = "0.11"
xcap = "0.8"
image = "0.25"
chrono = "0.4"
dirs = "5"
cpal = "0.15"
rustfft = "6"
tray-icon = "0.17"
num-complex = "0.4"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_Media_Multimedia", "Win32_System_Com", "Win32_System_Threading", "Win32_Security", "Win32_Security_Cryptography", "Win32_System_Memory", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
webrtc-vad = "0.4.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[build-dependencies]
winres = "0.1"


