[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
enigo = "0.2"
rdev = "0.5"
arboard = "3"
log = "0.4"
xcap = "0.8"
image = "0.25"
chrono = "0.4"
dirs = "5"
